value added course final commit

--- a/index.html
+++ b/index.html
@@ -13,37 +13,35 @@
         <section class="banner-img">
             <h1>All About Coffee</h1>
         </section>
-        <ul class="navbar">
-            <li>HOME</li>
-            <li>ROASTING</li>
-            <li>GRINDING</li>
-            <li>BREWING</li>
-            <li>DRINKS</li>
-            <li>COFFEE SURVEY</li>
+        <ul class="navbar nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="roasting.html">ROASTING</a></li>
+            <li><a href="grinding.html">GRINDING</a></li>
+            <li><a href="brewing.html">BREWING</a></li>
+            <li><a href="drinks.html">DRINKS</a></li>
+            <li><a href="survey.html">COFFEE SURVEY</a></li>
         </ul>
     </section>
     <h1>All About Coffee</h1>
     <section class="main-div">
         <section class="content-div">
             <section class="para">
-                <section style="height:200px">
-                    <img src="./images/coffee-cup.png" height="100%" alt="coffee cup" class="main-img">
-                </section>
+                <img src="./images/coffee-cup.png" alt="coffee cup" class="main-img">
+
                 <p>Coffee preparation is the process of turning coffee beans into a beverage. While the particular
                     steps vary with the type of coffee and with the raw materials, the process includes four basic
-                    steps;
-                    raw coffee beans must be roasted, the roasted coffee beans must then be ground, the ground coffee
+                    steps; raw coffee beans must be <a href="roasting.html">roasted</a>, the <a href="roasting.html">roasted</a> coffee beans must then be <a href="grinding.html">ground</a>, the <a href="grinding.html">ground</a> coffee
                     must then be mixed with hot water for a certain time (brewed), and finally the liquid coffee must be
                     separated from the used grounds.</p>
             </section>
-            <p>Coffee is usually brewed immediately before drinking. In most areas, coffee may be purchased
-                unprocessed, or already roasted, or already roasted and ground. Coffee is often vacuum packed to
+            <p>Coffee is usually <a href="brewing.html">brewed</a> immediately before drinking. In most areas, coffee may be purchased
+                unprocessed, or already roasted, or already <a href="roasting.html">roasted</a> and <a href="grinding.html">ground</a>. Coffee is often vacuum packed to
                 prevent oxidation and lengthen its shelf life.
             </p>
         </section>
         <blockquote>We want to do a lot of stuff; we're not in great shape. We didn't get a good night's sleep.
             We're a little depressed. Coffee solves all these problems in one delightful little cup.
-            <br />- Jerry Seinfeld
+            <br /><br/>- Jerry Seinfeld
         </blockquote>
     </section>
     <p>To learn more about coffee, just browse our informative site, or you can visit
