--- a/roasting.html
+++ b/roasting.html
@@ -13,13 +13,13 @@
         <section class="banner-img">
             <h1>All About Coffee</h1>
         </section>
-        <ul class="navbar">
-            <li>HOME</li>
-            <li>ROASTING</li>
-            <li>GRINDING</li>
-            <li>BREWING</li>
-            <li>DRINKS</li>
-            <li>COFFEE SURVEY</li>
+        <ul class="navbar nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="roasting.html">ROASTING</a></li>
+            <li><a href="grinding.html">GRINDING</a></li>
+            <li><a href="brewing.html">BREWING</a></li>
+            <li><a href="drinks.html">DRINKS</a></li>
+            <li><a href="survey.html">COFFEE SURVEY</a></li>
         </ul>
     </section>
     <h1>Coffee Roasting</h1>
@@ -33,9 +33,6 @@
             <p>Coffee can be roasted with ordinary kitchen equipment (frying pan, grill, oven, popcorn popper) or by
                 specialised appliances. A coffee roaster is a special pan or apparatus suitable to heat up and roast green coffee beans.
             </p>
-            <p>The vast majority of coffee is roasted commercially on a large scale, but small-scale commercial roasting has grown
-                significantly coffee at home as a hobby in order to both experiment with the flavor profile of the beans and ensure themselves of the
-                 with the trend toward "single-origin" coffees served at specialty shops. Some coffee drinkers even roastfreshest possible roast.</p>
         </section>
         <section class="roast-img">
             <section>
@@ -52,6 +49,9 @@
             </section>
         </section>
     </section>
+    <p class="roast-para">The vast majority of coffee is roasted commercially on a large scale, but small-scale commercial roasting has grown
+        significantly coffee at home as a hobby in order to both experiment with the flavor profile of the beans and ensure themselves of the
+         with the trend toward "single-origin" coffees served at specialty shops. Some coffee drinkers even roastfreshest possible roast.</p>
     <ul class="navbar footer">
         <li>HOME</li>
         <li>ROASTING</li>
