--- a/drinks.html
+++ b/drinks.html
@@ -1,56 +1,91 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Coffee Drinks</title>
+    <meta charset="utf-8">
+    <title>Coffee Drinks</title>
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
 <body>
-
-Coffee Drinks
-
-Drink
-Preparation
-Temperature
-Ingredients
-Details
-
-Cappuccino
-Espresso
-Hot
-Equal amount of espresso and steamed milk
-Pour the espresso through the milk and serve
-
-Latte
-Espresso
-Hot
-2/3 or more steamed milk and espresso
-Pour the espresso through the milk and serve.
-
-Macchiato
-Espresso
-Hot
-Espresso with just a "mark" of steamed milk
-Add milk to the expresso after pressing.
-
-Iced Coffee
-Drip or french press
-Cold
-Coffee poured over ice
-Can be sweetened with sugar or creme.
-
-Frappé
-Strong instant coffee
-Cold
-Instant coffee, water and milk 
-Shake to create a foam, then pour over ice and serve. A specialty in Greece
-
-Flat white
-Espresso
-Hot
-1/3 espresso and 2/3 steamed milk
-A specialty in Australia and New Zealand. The foam is often decorated with a motif.
-
+    <section class="header">
+        <section class="banner-img">
+            <h1>All About Coffee</h1>
+        </section>
+        <ul class="navbar nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="roasting.html">ROASTING</a></li>
+            <li><a href="grinding.html">GRINDING</a></li>
+            <li><a href="brewing.html">BREWING</a></li>
+            <li><a href="drinks.html">DRINKS</a></li>
+            <li><a href="survey.html">COFFEE SURVEY</a></li>
+        </ul>
+    </section>
+    <h1>Coffee Drinks</h1>
+    <video width="640" height="360" controls poster="media/movie.jpg">
+        <source src="media/movie.mp4" type="video/mp4" />
+        Your browser does not support video playback
+    </video>
+    <table>
+        <caption>Popular Drinks</caption>
+        <tr>
+            <th>Drink</th>
+            <th>Preparation</th>
+            <th>Temperature</th>
+            <th>Ingredients</th>
+            <th>Details</th>
+        </tr>
+        <tr>
+            <td>Cappuccino</td>
+            <td>Espresso</td>
+            <td>Hot</td>
+            <td>Equal amount of espresso and steamed milk</td>
+            <td>Pour the espresso through the milk and serve</td>
+        </tr>
+        <tr>
+            <td>Latte</td>
+            <td>Espresso</td>
+            <td>Hot</td>
+            <td>2/3 or more steamed milk and espresso</td>
+            <td>Pour the espresso through the milk and serve.</td>
+        </tr>
+        <tr>
+            <td>Macchiato</td>
+            <td>Espresso</td>
+            <td>Hot</td>
+            <td>Espresso with just a "mark" of steamed milk</td>
+            <td>Add milk to the expresso after pressing.</td>
+        </tr>
+        <tr>
+            <td>Iced Coffee</td>
+            <td>Drip or french press</td>
+            <td>Cold</td>
+            <td>Coffee poured over ice</td>
+            <td>Can be sweetened with sugar or creme.</td>
+        </tr>
+        <tr>
+            <td>Frappé</td>
+            <td>Strong instant coffee</td>
+            <td>Cold</td>
+            <td>Instant coffee, water and milk </td>
+            <td>Shake to create a foam, then pour over ice and serve. A specialty in Greece</td>
+        </tr>
+        <tr>
+            <td>Flat white</td>
+            <td>Espresso</td>
+            <td>Hot</td>
+            <td>1/3 espresso and 2/3 steamed milk</td>
+            <td>A specialty in Australia and New Zealand. The foam is often decorated with a motif.</td>
+        </tr>
+    </table>
+    <ul class="navbar footer">
+        <li>HOME</li>
+        <li>ROASTING</li>
+        <li>GRINDING</li>
+        <li>BREWING</li>
+        <li>DRINKS</li>
+        <li>COFFEE SURVEY</li>
+    </ul>
 </body>
 </html>
